@@ -10,6 +10,10 @@ What's New in Python 3.6.0 release candidate 1
 Core and Builtins
 -----------------
 
+- Issue #28797: Modifying the class __dict__ inside the __set_name__ method of
+  a descriptor that is used inside that class no longer prevents calling the
+  __set_name__ method of other descriptors.
+
 - Issue #28782: Fix a bug in the implementation ``yield from`` when checking
   if the next instruction is YIELD_FROM. Regression introduced by WORDCODE
   (issue #26647).
